--- a/Contributions/contributions.html
+++ b/Contributions/contributions.html
@@ -79,16 +79,38 @@
   <br />
   <br />
   <br />
-    <h1><b><center>How to Contribute ?</center></b></h1>
-    <br>
-    <div id= "steps" style="width: 780px; margin: auto; text-align: left;">
-    <ol>
-        <li>Login with your Personal Github Account.</li>
-        <li>Click on the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a> and FORK it.</li>
-        <li>Make changes to the forked repository and Create Pull Request.</li>
-    </ol>
+  
+  <div class="row">
+
+    <div class="col-sm-6">
+      <h1><b><center>How to Contribute ?</center></b></h1>
+      <br>
+      <div id= "steps" style="float: left; margin: auto; text-align: left;">
+        <ol>
+            <li>Login with your Personal Github Account.</li>
+            <li>Click on the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a> and FORK it.</li>
+            <li>Make changes to the forked repository by following the steps given on the right of the page and Create Pull Request.</li>
+        </ol>
+      </div>
     </div>
-    <br>
+    
+      <div class="col-sm-6">
+        <h1><b><center>Steps to contribute in Contributions page</center></b></h1>
+        <br>
+        <div id= "steps" style="float: left; margin: auto; text-align: left;">
+          <ol>
+              <li>Go to the following <a href="https://github.com/hands-on-data/hands-on-data.github.io">REPO LINK</a></li>
+              <li>Click on the Contributions folder</li>
+              <li>Click on the contributions.html file</li>
+              <li>In the file contributions.html there is a div named card</li>
+              <li>Copy the div named card and paste it again below the other divs</li>
+              <li>Edit the fields inside the HTML elements named card-header and card-body</li>
+              <li> Commit your changes </li>
+
+          </ol>
+        </div>
+        </div>
+    </div>
 
     <div class="card">
       <h5 class="card-header"><b>Project Name: CNN</b></h5>
@@ -117,6 +139,14 @@
 
 
     <div class="card">
+      <h5 class="card-header"><b>Project Name: ML Workshop [KV]</b></h5>
+      <div class="card-body">
+        <a href="https://drive.google.com/drive/folders/1awNkcDttRe2cjmSh1n3ZfaPwON_LtfVJ?usp=sharing" class="btn btn-primary">Project Link</a>
+        <h5 style="text-align:  right;"><b>[Contributed by: Athira S Menon]</b></h5>
+      </div>
+    </div>
+
+    <div class="card">
       <h5 class="card-header"><b>Project Name: Decision Tree and Random Forest</b></h5>
       <div class="card-body">
         <a href="https://drive.google.com/drive/folders/1IQhq5OYOMEfSwyUsRJrMRbpXnMNhWf95?usp=sharing" class="btn btn-primary">Project Link</a>
@@ -134,6 +164,13 @@
       </div>
     </div>
 
+    <div class="card">
+      <h5 class="card-header"><b>Project Name: Workshop on Neural Network</b></h5>
+      <div class="card-body">
+        <a href="https://drive.google.com/drive/folders/1X_b68nuriq5deJsTTF1oSpUu3vdWACFv?usp=sharing" class="btn btn-primary">Project Link</a>
+        <h5 style="text-align:  right;"><b>[Contributed by: Biswa Bhushan Satapathy]</b></h5>
+      </div>
+    </div>
 
     </body>
 </html>
