Uploading contributed notebook for CNN

--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
         <div class="content">
           <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/ML_DL_workshop_PCA.ipynb">PCA</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/ML_DL_workshop_DT___RF.ipynb">DT and RF</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/CnnDemo.ipynb">CNN Demo</a></button>
         </div>
 </div>
 <div id="info" style="float: right; width: 75%; height: 100vh; background-color: #eaebec;">
