Commiting notebook for DBSCAN

--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
       <button type="button" class="collapsible">Clustering</button>
         <div class="content">
           <button type="button" class="uncollapsible"><a id="link" href="k_means_clustering/k_means.html">K Means Clustering</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="#">DBSCAN</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/DBSCAN_tutorial.ipynb">DBSCAN</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
         </div>
 
