Adding the gist

--- a/DBSCAN/DBSCAN.html
+++ b/DBSCAN/DBSCAN.html
@@ -86,7 +86,7 @@
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/DBSCAN_tutorial.ipynb"> Edit Code</a>
     </div>
     <br />
-  <!---  <script src="https://gist.github.com/karmakarsubhajit/47f7eefcaf3e1acab5712d5693fcf5ee.js"></script> --->
+  <script src="https://gist.github.com/karmakarsubhajit/b5f4a1bc1a8084760b2274300f882505.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
