Adding items in side menu

--- a/home.html
+++ b/home.html
@@ -122,8 +122,8 @@
       <button type="button" class="collapsible">Classification</button>
         <div class="content">
           <button type="button" class="uncollapsible"><a id="link" href="naive_bayes/naive_bayes.html">Naive Bayes</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="#">Algo 2</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="#">Algo 3</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="#">Logistic Regression</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="#">Decision Tree</a></button>
         </div>
       
       <br>
