--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
       <button type="button" class="collapsible">Classification</button>
         <div class="content">
           <button type="button" class="uncollapsible"><a id="link" href="naive_bayes/naive_bayes.html">Naive Bayes</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="#">Logistic Regression</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Logistic_Regression_Tutorial.ipynb">Logistic Regression</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="#">Decision Tree</a></button>
         </div>
       
