--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
         <div class="content">
           <button type="button" class="uncollapsible"><a id="link" href="naive_bayes/naive_bayes.html">Naive Bayes</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Logistic_Regression_Tutorial.ipynb">Logistic Regression</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="#">Decision Tree</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Decision_Tree_Tutorial.ipynb">Decision Tree</a></button>
         </div>
       
       <br>
