added resource and contribution tab in nav bars

--- a/Decision_Tree/decision_tree.html
+++ b/Decision_Tree/decision_tree.html
@@ -66,7 +66,13 @@
               >
             </li>
             <li class="nav-item">
-              <a href="../about.html" class="nav-link">About</a>
+                <a href="../about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="../resources.html" class="nav-link">Resources</a>
+            </li>
+            <li class="nav-item">
+                <a href="../Contributions/contributions.html" class="nav-link">Contributions</a>
             </li>
           </ul>
         </div>
