--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
       
       <button type="button" class="collapsible">Regression</button>
         <div class="content">
-          <div class="uncollapsible" ><a id="link" href="./linear_regression/index.html">Data Visualization</a></div>
+          <div class="uncollapsible" ><a id="link" href="./linear_regression/index.html">Linear Regression</a></div>
         </div>
 
       <br>
@@ -121,7 +121,7 @@
           <button type="button" class="uncollapsible"><a id="link" href="naive_bayes/naive_bayes.html">Naive Bayes</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="./logistic_regression/logistic_regression.html">Logistic Regression</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="./Decision_Tree/decision_tree.html">Decision Tree</a></button>
-          <button type="button" class="uncollapsible"><a id="link" href="./Decision_Tree/decision_tree.html">Random Forest</a></button>
+          <button type="button" class="uncollapsible"><a id="link" href="./Random_Forest/random_forest.html">Random Forest</a></button>
         </div>
       
       <br>
