--- a/Random_Forest/random_forest.html
+++ b/Random_Forest/random_forest.html
@@ -68,6 +68,12 @@
             <li class="nav-item">
               <a href="../about.html" class="nav-link">About</a>
             </li>
+            <li class="nav-item">
+                <a href="../resources.html" class="nav-link">Resources</a>
+              </li>
+              <li class="nav-item">
+                <a href="../Contributions/contributions.html" class="nav-link">Contributions</a>
+              </li>
           </ul>
         </div>
       </div>
