--- a/Random_Forest/random_forest.html
+++ b/Random_Forest/random_forest.html
@@ -89,7 +89,7 @@
   <h4>Random Forest</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="#"> Edit Code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Random_Forest_Tutorial.ipynb"> Edit Code</a>
     </div>
     <br />
   <script src="#"></script>
