added few videos in resources page

--- a/resources.html
+++ b/resources.html
@@ -116,7 +116,78 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Data Preprocessing Techniques</b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ylhwP6wFEag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
 
+        
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Data Visualization with Matplotlib </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yZTBMMdPOww" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Data Visualization with Seaborn </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TLdXM0A7SR8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Regression </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yP1S37BiEsQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Clustering </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/esmzYhuFnds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Classification </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/eg8DJYwdMyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>Decision Tree and Random Forest </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZOiBe-nrmc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card" style="align-items: center;">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;"><b>DBSCAN Clustering </b></h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7iWANbkFxk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
 
     </div>
     
