--- a/home.html
+++ b/home.html
@@ -81,6 +81,9 @@
               <li class="nav-item">
                 <a href="Contributions/contributions.html" class="nav-link">Contributions</a>
               </li>
+              <li class="nav-item">
+                <a href="Navbar/UserGuide/userguide.html" class="nav-link">User Guide</a>
+              </li>
             </ul>
           </div>
         </div>
