added usecases and CNN in sidemenu

--- a/home.html
+++ b/home.html
@@ -135,6 +135,24 @@
           <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/ML_DL_workshop_DT___RF.ipynb">DT and RF</a></button>
           <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/CnnDemo.ipynb">CNN Demo</a></button>
         </div>
+
+      <br>
+
+      <button type="button" class="collapsible">Use Cases </button>
+      <div class="content">
+        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+      </div>
+
+      <br>
+
+      <button type="button" class="collapsible">CNN</button>
+      <div class="content">
+        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+      </div>
+
 </div>
 <div id="info" style="float: right; width: 75%; height: 100vh; background-color: #eaebec;">
       <div class="row">
