created webpage for fake_new_detection

--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
 
       <button type="button" class="collapsible">Use Cases </button>
       <div class="content">
-        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="Sidemenu/UseCase/Fake_News_Detection/fake_news_detection.html">Fake News Detection</a></button>
         <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
         <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
       </div>
