Commit notebook for Fake News Detection

--- a/Sidemenu/UseCase/Fake_News_Detection/fake_news_detection.html
+++ b/Sidemenu/UseCase/Fake_News_Detection/fake_news_detection.html
@@ -89,7 +89,7 @@
   <h4>Fake News Detection</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="#"> Edit Code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Fake_News_Detection.ipynb"> Edit Code</a>
     </div>
     <br />
   <script src="#"></script>
