--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
       <button type="button" class="collapsible">CNN</button>
       <div class="content">
         <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/CNN_Image_Classification.ipynb">Image Classification</a></button>
-        <button type="button" class="uncollapsible"><a id="link" href="#">Fake News Detection</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="#">Digit Recognition</a></button>
       </div>
 
 </div>
