added webpages for image_classification and digit recognition

--- a/home.html
+++ b/home.html
@@ -149,8 +149,8 @@
 
       <button type="button" class="collapsible">CNN</button>
       <div class="content">
-        <button type="button" class="uncollapsible"><a id="link" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/CNN_Image_Classification.ipynb">Image Classification</a></button>
-        <button type="button" class="uncollapsible"><a id="link" href="#">Digit Recognition</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="Sidemenu/CNN/Image_Classification/image_classification.html">Image Classification</a></button>
+        <button type="button" class="uncollapsible"><a id="link" href="Sidemenu/CNN/Digit_Recognition/digit_recognition.html">Digit Recognition</a></button>
       </div>
 
 </div>
