Update notebook url

--- a/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
+++ b/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
@@ -89,7 +89,7 @@
   <h4>Digit Recognition</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="#"> Edit Code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Digit_Recognition.ipynb"> Edit Code</a>
     </div>
     <br />
   <script src="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Digit_Recognition.ipynb"></script>
