created and updated user guide page

--- a/Navbar/UserGuide/userguide.html
+++ b/Navbar/UserGuide/userguide.html
@@ -85,6 +85,62 @@
   <br />
     <h1><b><u><center>User Guide</center></u></b></h1>
     <br>
+      <div>
+        <h3><b><center> Steps to follow:</center></b></h3>
+        <br>
+        <div id= "steps" style="text-align: left;">
+          <ol>
+              <li><b>To learn algorithms using the tutorials, click on any one class of your interest in the side menu. For example: Clustering<b></li>
+                <div style="margin-left: 160px;">
+                  <br>
+                  <img src="images/home_page_ss.JPG" width="650px" height="400px">
+                  <br>
+                </div>
+                <br>
+              <li>Choose one of the algorithm. For example: K-means Clustering in the Clustering class. It will open new page like this.</li>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/k_means_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+              <li>Now you can see code and click on edit button to experiment over it. It will take you to google colab notebook hosted with github. So, you need to login with your respective gmail account to save any changes made to your local copy.</li>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/k_means_colab_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+              <li>If you want to contribute to our website. You can go to Home page and click on Contributions in the Navbar as shown in below picture and follow the instructions given in the contributions page.</li>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/contribution_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/contribution_page_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+              <li>If you want to learn Data science from videos, we have resources section, which you can explore. Click on Resources in the home page and get started. </li>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/resources_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/resources_page_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+          </ol>
+        </div>
+      </div>
+
     
     
   </body>
