--- a/Navbar/UserGuide/userguide.html
+++ b/Navbar/UserGuide/userguide.html
@@ -90,21 +90,28 @@
         <br>
         <div id= "steps" style="text-align: left;">
           <ol>
-              <li><b>To learn algorithms using the tutorials, click on any one class of your interest in the side menu. For example: Clustering<b></li>
+              <li><b>To learn algorithms using the tutorials, click on any one class of Algorithms of your interest in the side menu. For example: Clustering<b></li>
                 <div style="margin-left: 160px;">
                   <br>
-                  <img src="images/home_page_ss.JPG" width="650px" height="400px">
+                    <img src="images/home_ss.JPG" width="650px" height="400px">
                   <br>
                 </div>
                 <br>
-              <li>Choose one of the algorithm. For example: K-means Clustering in the Clustering class. It will open new page like this.</li>
+              <li>Choose one of the algorithm. For example: K-means Clustering in the Clustering class.</li>
+              <div style="margin-left: 160px;">
+                <br>
+                <img src="images/home_page_ss.JPG" width="650px" height="400px">
+                <br>
+              </div>
+              <br>
+              
+              <li>Now you can see code and click on edit button to experiment over it. It will take you to google colab notebook hosted with github. So, you need to login with your respective gmail account to save any changes made to your local copy.</li>
               <div style="margin-left: 160px;">
                 <br>
                 <img src="images/k_means_ss.JPG" width="650px" height="400px">
                 <br>
               </div>
               <br>
-              <li>Now you can see code and click on edit button to experiment over it. It will take you to google colab notebook hosted with github. So, you need to login with your respective gmail account to save any changes made to your local copy.</li>
               <div style="margin-left: 160px;">
                 <br>
                 <img src="images/k_means_colab_ss.JPG" width="650px" height="400px">
