--- a/Random_Forest/random_forest.html
+++ b/Random_Forest/random_forest.html
@@ -92,7 +92,7 @@
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Random_Forest_Tutorial.ipynb"> Edit Code</a>
     </div>
     <br />
-  <script src="#"></script>
+    <script src="https://gist.github.com/hands-on-data/583132d01e85a1672903d042465eeaf5.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
