added gist for naive bayes

--- a/naive_bayes/naive_bayes.html
+++ b/naive_bayes/naive_bayes.html
@@ -110,7 +110,7 @@
       >
     </div>
     <br />
-    <script src="#"></script>
+    <script src="https://gist.github.com/hands-on-data/4077744d2ae84cadc309faa7888d42fa.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
