added gist for different tutorials

--- a/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
+++ b/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
@@ -92,7 +92,7 @@
       <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Digit_Recognition.ipynb"> Edit Code</a>
     </div>
     <br />
-  <script src="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Digit_Recognition.ipynb"></script>
+    <script src="https://gist.github.com/hands-on-data/e7fbca60320b8fba38df52f9ab1b0994.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
