refactored the folder structure

--- a/Sidemenu/Classification/naive_bayes/naive_bayes.html
+++ b/Sidemenu/Classification/naive_bayes/naive_bayes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Image Classification</title>
+    <title>Naive Bayes</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
@@ -11,7 +11,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="image_classification.css" />
+    <link rel="stylesheet" href="naive_bayes.css" />
   </head>
 
   <body>
@@ -73,27 +73,44 @@
       </div>
     </div>
   </nav>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <h1>Naive Bayes</h1>
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <h1>Image Classification</h1>
-
-  <h4>Image Classification</h4>
+    <h4>Load Dataset</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Image_Classification.ipynb"> Edit Code</a>
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/NaiveBayes_Load_Datasets.ipynb"
+        role="button"
+      >
+        Edit Code</a
+      >
     </div>
     <br />
-    <script src="https://gist.github.com/hands-on-data/d240d56f23aa370c4bf622895ea5734f.js"></script>
+    <br />
+    <h4>Naive Bayes Tutorial</h4>
+    <br />
+    <div class="text-center">
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/NaiveBayes_Tutorial.ipynb"
+        role="button"
+      >
+        Edit Code</a
+      >
+    </div>
+    <br />
+    <script src="https://gist.github.com/hands-on-data/4077744d2ae84cadc309faa7888d42fa.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
