--- a/Sidemenu/Clustering/DBSCAN/DBSCAN.html
+++ b/Sidemenu/Clustering/DBSCAN/DBSCAN.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Logistic Regression</title>
+    <title>DBSCAN</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
@@ -11,18 +11,10 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="logistic_regression.css" />
+    <link rel="stylesheet" href="DBSCAN.css" />
   </head>
 
   <body>
-    <!-- <nav class="navbar fixed-top navbar-dark bg-dark">
-      <div>
-        <a class="navbar-brand px-5" href="../index.html">Data Science Demo</a>
-        <a class="navbar-brand px-5" href="../index.html">Home<span class="sr-only">(current)</span></a>
-        <a class="navbar-brand px-5" href="../about.html">About</a>
-      </div>
-      </nav> -->
-
     <nav
       class="
         navbar navbar-expand-lg
@@ -34,10 +26,10 @@
       "
     >
       <div class="container">
-        <a href="../home.html" class="navbar-brand">
+        <a href="../../../Navbar/Home/home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
-            src="../logo.jpg"
+            src="../../../Navbar/Logo/logo.jpg"
             width="60"
             alt=""
             class="d-inline-block align-middle mr-2"
@@ -61,19 +53,22 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="../home.html" class="nav-link"
+              <a href="../../../Navbar/Home/home.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="../about.html" class="nav-link">About</a>
+              <a href="../../../Navbar/About/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="../resources.html" class="nav-link">Resources</a>
-              </li>
-              <li class="nav-item">
-                <a href="../Contributions/contributions.html" class="nav-link">Contributions</a>
-              </li>
+              <a href="../../../Navbar/Resources/resources.html" class="nav-link">Resources</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../../Navbar/Contributions/contributions.html" class="nav-link">Contributions</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../../Navbar/UserGuide/userguide.html" class="nav-link">User Guide</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -84,15 +79,15 @@
     <br />
     <br />
     <br />
-    <h1>Logistic Regression</h1>
+    <h1>DBSCAN</h1>
 
-  <h4>Logistic Regression</h4>
+  <h4>DBSCAN Tutorial</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Logistic_Regression_Tutorial.ipynb"> Edit Code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/DBSCAN_tutorial.ipynb"> Edit Code</a>
     </div>
     <br />
-  <script src="https://gist.github.com/hands-on-data/494f9c95b4bf2519a876e379b9c1ef7e.js"></script>  
+    <script src="https://gist.github.com/hands-on-data/6f41658b0f0a1b57fc3954b0122b2cf7.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
