--- a/Sidemenu/Regression/linear_regression/index.html
+++ b/Sidemenu/Regression/linear_regression/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Naive Bayes</title>
+    <title>Linear Regression</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
@@ -11,18 +11,10 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="naive_bayes.css" />
+    <link rel="stylesheet" href="lreg_style.css" />
   </head>
 
   <body>
-    <!-- <nav class="navbar fixed-top navbar-dark bg-dark">
-      <div>
-        <a class="navbar-brand px-5" href="../index.html">Data Science Demo</a>
-        <a class="navbar-brand px-5" href="../index.html">Home<span class="sr-only">(current)</span></a>
-        <a class="navbar-brand px-5" href="../about.html">About</a>
-      </div>
-      </nav> -->
-
     <nav
       class="
         navbar navbar-expand-lg
@@ -34,10 +26,10 @@
       "
     >
       <div class="container">
-        <a href="../home.html" class="navbar-brand">
+        <a href="../../../Navbar/Home/home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
-            src="../logo.jpg"
+            src="../../../Navbar/Logo/logo.jpg"
             width="60"
             alt=""
             class="d-inline-block align-middle mr-2"
@@ -61,18 +53,21 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="../home.html" class="nav-link"
+              <a href="../../../Navbar/Home/home.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="../about.html" class="nav-link">About</a>
+              <a href="../../../Navbar/About/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="../resources.html" class="nav-link">Resources</a>
+              <a href="../../../Navbar/Resources/resources.html" class="nav-link">Resources</a>
             </li>
             <li class="nav-item">
-              <a href="../Contributions/contributions.html" class="nav-link">Contributions</a>
+              <a href="../../../Navbar/Contributions/contributions.html" class="nav-link">Contributions</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../../Navbar/UserGuide/userguide.html" class="nav-link">User Guide</a>
             </li>
           </ul>
         </div>
@@ -83,14 +78,14 @@
     <br />
     <br />
     <br />
-    <h1>Naive Bayes</h1>
+    <h1>Linear Regression</h1>
 
     <h4>Load Dataset</h4>
     <br />
     <div class="text-center">
       <a
         class="btn btn-primary"
-        href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/NaiveBayes_Load_Datasets.ipynb"
+        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Load_Datasets.ipynb"
         role="button"
       >
         Edit Code</a
@@ -98,19 +93,33 @@
     </div>
     <br />
     <br />
-    <h4>Naive Bayes Tutorial</h4>
+    <h4>Create Dataset</h4>
     <br />
     <div class="text-center">
       <a
         class="btn btn-primary"
-        href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/NaiveBayes_Tutorial.ipynb"
+        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/LinearRegression_Create_Datasets.ipynb"
         role="button"
       >
         Edit Code</a
       >
     </div>
     <br />
-    <script src="https://gist.github.com/hands-on-data/4077744d2ae84cadc309faa7888d42fa.js"></script>
+    <br />
+    <h4>Linear Regression Tutorial</h4>
+    <br />
+    <div class="text-center">
+      <a
+        class="btn btn-primary"
+        href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Linear_Regression_Tutorial.ipynb"
+        role="button"
+      >
+        Edit Code</a
+      >
+    </div>
+    <br />
+    <script src="https://gist.github.com/hands-on-data/2a24b549bb0f2d693220d4a29d518967.js"></script>
+    
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
