--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       "
     >
       <div class="container">
-        <a href="home.html" class="navbar-brand">
+        <a href="Navbar/Home/home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
-            src="logo.jpg"
+            src="Navbar/Logo/logo.jpg"
             width="60"
             alt=""
             class="d-inline-block align-middle mr-2"
@@ -59,20 +59,25 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="home.html" class="nav-link"
+              <a href="Navbar/Home/home.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
+              <a href="Navbar/About/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="resources.html" class="nav-link">Resources</a>
+              <a href="Navbar/Resources/resources.html" class="nav-link">Resources</a>
             </li>
             
             <li class="nav-item">
-              <a href="Contributions/contributions.html" class="nav-link">Contributions</a>
+              <a href="Navbar/Contributions/contributions.html" class="nav-link">Contributions</a>
             </li>
+
+            <li class="nav-item">
+              <a href="Navbar/UserGuide/userguide.html" class="nav-link">User Guide</a>
+            </li>
+
           </ul>
         </div>
       </div>
@@ -105,7 +110,7 @@
             
           </div>
           <br>
-          <a type="button" class="btn btn-primary btn-lg" href="home.html">Let's Get Started</a>
+          <a type="button" class="btn btn-primary btn-lg" href="Navbar/Home/home.html">Let's Get Started</a>
         </div>
         </div>
         <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
