--- a/Navbar/UserGuide/userguide.html
+++ b/Navbar/UserGuide/userguide.html
@@ -19,65 +19,67 @@
     <link href="userguide.css" rel="stylesheet">
 </head>
 <body>
-    <nav
-    class="
-      navbar navbar-expand-lg
-      py-0
-      fixed-top
-      navbar-dark
-      bg-dark
-      shadow-sm
-    "
-  >
-    <div class="container">
-      <a href="../../home.html" class="navbar-brand">
-        <!-- Logo Image -->
-        <img
-          src="../../logo.jpg"
-          width="60"
-          alt=""
-          class="d-inline-block align-middle mr-2"
-        />
-        <!-- Logo Text -->
-        <span class="font-weight-bold">HandsOnData</span>
-      </a>
+  <nav
+  class="
+    navbar navbar-expand-lg
+    py-0
+    fixed-top
+    navbar-dark
+    bg-dark
+    shadow-sm
+  "
+>
+  <div class="container">
+    <a href="../Home/home.html" class="navbar-brand">
+      <!-- Logo Image -->
+      <img
+        src="../Logo/logo.jpg"
+        width="60"
+        alt=""
+        class="d-inline-block align-middle mr-2"
+      />
+      <!-- Logo Text -->
+      <span class="font-weight-bold">HandsOnData</span>
+    </a>
 
-      <button
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        class="navbar-toggler"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <button
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+      class="navbar-toggler"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div id="navbarSupportedContent" class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="../../home.html" class="nav-link"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="../../about.html" class="nav-link">About<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="../../resources.html" class="nav-link">Resources</a>
-          </li>
-          <li class="nav-item">
-            <a href="../../Contributions/contributions.html" class="nav-link">Contributions</a>
-          </li>
-          
-          <li class="nav-item">
-            <a href="userguide.html" class="nav-link">User Guide</a>
-          </li>
-        </ul>
-      </div>
+    <div id="navbarSupportedContent" class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="../Home/home.html" class="nav-link"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="../About/about.html" class="nav-link">About<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="../Resources/resources.html" class="nav-link">Resources</a>
+        </li>
+        
+        <li class="nav-item">
+          <a href="../Contributions/contributions.html" class="nav-link">Contributions</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="../UserGuide/userguide.html" class="nav-link">User Guide</a>
+        </li>
+
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
   <br />
   <br />
   <br />
