--- a/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
+++ b/Sidemenu/CNN/Digit_Recognition/digit_recognition.html
@@ -15,14 +15,6 @@
   </head>
 
   <body>
-    <!-- <nav class="navbar fixed-top navbar-dark bg-dark">
-      <div>
-        <a class="navbar-brand px-5" href="../index.html">Data Science Demo</a>
-        <a class="navbar-brand px-5" href="../index.html">Home<span class="sr-only">(current)</span></a>
-        <a class="navbar-brand px-5" href="../about.html">About</a>
-      </div>
-      </nav> -->
-
     <nav
       class="
         navbar navbar-expand-lg
@@ -34,10 +26,10 @@
       "
     >
       <div class="container">
-        <a href="../../../home.html" class="navbar-brand">
+        <a href="../../../Navbar/Home/home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
-            src="../../../logo.jpg"
+            src="../../../Navbar/Logo/logo.jpg"
             width="60"
             alt=""
             class="d-inline-block align-middle mr-2"
@@ -61,19 +53,22 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="../../../home.html" class="nav-link"
+              <a href="../../../Navbar/Home/home.html" class="nav-link"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="../../../about.html" class="nav-link">About</a>
+              <a href="../../../Navbar/About/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="../../../resources.html" class="nav-link">Resources</a>
-              </li>
-              <li class="nav-item">
-                <a href="../../../Contributions/contributions.html" class="nav-link">Contributions</a>
-              </li>
+              <a href="../../../Navbar/Resources/resources.html" class="nav-link">Resources</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../../Navbar/Contributions/contributions.html" class="nav-link">Contributions</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../../Navbar/UserGuide/userguide.html" class="nav-link">User Guide</a>
+            </li>
           </ul>
         </div>
       </div>
