--- a/Sidemenu/Classification/Decision_Tree/decision_tree.html
+++ b/Sidemenu/Classification/Decision_Tree/decision_tree.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Image Classification</title>
+    <title>Decision Tree</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
@@ -11,7 +11,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="image_classification.css" />
+    <link rel="stylesheet" href="decision_tree.css" />
   </head>
 
   <body>
@@ -79,15 +79,15 @@
     <br />
     <br />
     <br />
-    <h1>Image Classification</h1>
+    <h1>Decision Tree</h1>
 
-  <h4>Image Classification</h4>
+  <h4>Decision Tree</h4>
     <br />
     <div class="text-center">
-      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Image_Classification.ipynb"> Edit Code</a>
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/hands-on-data/ColabFiles/blob/main/Decision_Tree_Tutorial.ipynb"> Edit Code</a>
     </div>
     <br />
-    <script src="https://gist.github.com/hands-on-data/d240d56f23aa370c4bf622895ea5734f.js"></script>
+  <script src="https://gist.github.com/hands-on-data/7f8ef2dfdcdf430361539c36d875995e.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
