--- a/Sidemenu/Clustering/k_means_clustering/k_means.html
+++ b/Sidemenu/Clustering/k_means_clustering/k_means.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About</title>
+    <title>K Means Clustering</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
@@ -11,17 +11,10 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="k_means.css" />
   </head>
 
   <body>
-    <!-- <nav class="navbar fixed-top navbar-dark bg-dark">
-        <div>
-          <a class="navbar-brand px-5" href="index.html">Data Science Demo</a>
-          <a class="navbar-brand px-5" href="index.html">Home<span class="sr-only">(current)</span></a>
-          <a class="navbar-brand px-5" href="about.html">About</a>
-        </div>
-        </nav> -->
     <nav
       class="
         navbar navbar-expand-lg
@@ -33,10 +26,10 @@
       "
     >
       <div class="container">
-        <a href="home.html" class="navbar-brand">
+        <a href="../../../Navbar/Home/home.html" class="navbar-brand">
           <!-- Logo Image -->
           <img
-            src="logo.jpg"
+            src="../../../Navbar/Logo/logo.jpg"
             width="60"
             alt=""
             class="d-inline-block align-middle mr-2"
@@ -59,22 +52,23 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="home.html" class="nav-link"
-                >Home</a
+            <li class="nav-item active">
+              <a href="../../../Navbar/Home/home.html" class="nav-link"
+                >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About<span class="sr-only">(current)</span></a>
+              <a href="../../../Navbar/About/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="resources.html" class="nav-link">Resources</a>
+              <a href="../../../Navbar/Resources/resources.html" class="nav-link">Resources</a>
             </li>
-            
             <li class="nav-item">
-              <a href="Contributions/contributions.html" class="nav-link">Contributions</a>
+              <a href="../../../Navbar/Contributions/contributions.html" class="nav-link">Contributions</a>
             </li>
-
+            <li class="nav-item">
+              <a href="../../../Navbar/UserGuide/userguide.html" class="nav-link">User Guide</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -84,28 +78,21 @@
     <br />
     <br />
     <br />
-    <h1>About</h1>
-    <div id="about_content">
-      This project named HandsOnData is done by Subhajit Karmakar and Parmanand Kumar, undergraduate students of Computer Science and Engineering,  
-      Indian Institute of Technology Palakkad as part of their Final Year BTech Project. </br> This project is carried out under the guidance of Dr. Mrinal Kanti Das, 
-      Assistant Professor, Computer Science and Engineering Department, IIT Palakkad.  
-     </div>
-    <br />
-    <br />
-    <br />
-    <div id="points">
-        <ul>
-          <li><h6>HandsOnData is an app intended to help people learn Data Science. </h6></li>
-          <li><h6>HandsOnData contains implementations of various Machine algorithms.</h6></li>
-          <li><h6>HandsOnData helps to learn the entire end-to-end data pipeline starting from data preprocessing, data visualization, and then application of the algorithm.</h6></li>
-        </ul> 
-    </div>
+    <h1>K-means Clustering</h1>
 
+  <h4>K-Means Tutorial</h4>
+    <br />
+    <div class="text-center">
+      <a class="btn btn-primary" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/KMeans_Tutorial.ipynb"> Edit Code</a>
+    </div>
+    <br />
+    <script src="https://gist.github.com/hands-on-data/20850638bddaadcd9e9c13697e307972.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
+    
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
