added web page for the data preprocessing and visualization

--- a/Navbar/Home/home.html
+++ b/Navbar/Home/home.html
@@ -101,8 +101,8 @@
 <div id="sidemenu" style="float:left; width: 25%">
       <button type="button" class="collapsible">Data Visualization and Preprocessing</button>
         <div class="content">
-          <div class="uncollapsible" ><a id="link" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Data_Visualization.ipynb">Data Visualization</a></div>
-          <div class="uncollapsible" ><a id="link" href="https://colab.research.google.com/github/karmakarsubhajit/ColabDemo/blob/main/Data_Preprocessing.ipynb">Data Preprocessing</a></div>
+          <div class="uncollapsible" ><a id="link" href="../../Sidemenu/Data_Visualization_and_Preprocessing/Data_Visualization/data_visualization.html">Data Visualization</a></div>
+          <div class="uncollapsible" ><a id="link" href="../../Sidemenu/Data_Visualization_and_Preprocessing/Data_Preprocessing/data_preprocessing.html">Data Preprocessing</a></div>
         </div>
 
       <br>
